2005-12-07  Werner Koch  <wk@g10code.com>

	Released 0.3.1.

2005-12-06  Werner Koch  <wk@g10code.com>

	Released 0.3.0.

2005-12-02  Werner Koch  <wk@g10code.com>

	* packages/download.sh: New option --force.  Default to skip
	already existing packages.

2005-12-02  Timo Schulz  <ts@g10code.com>

	* packages/download.sh: Update WinPT url.
	* packages/packages.keys: Add second release key for WinPT.
	
2005-11-30  Werner Koch  <wk@g10code.com>

	* src/inst-gpgol.nsi: Install German translation.
	* src/uninst-gpgol.nsi: Likewise.

2005-11-29  Werner Koch  <wk@g10code.com>

	* packages/packages.current: New.  This is more or less a
	template; the version on the server may be updated without syncing
	it to this version.
	* packages/packages.keys: New.
	* packages/download.sh: Rewritten.

	* src/inst-sections.nsi (.onInstFailed, .onInstSuccess): New.
	(RunOnFinish): New function to run a key manager depending on the
	installed ones.
	* src/installer.nsi: Use a function to run the key manager on finish.

2005-11-28  Werner Koch  <wk@g10code.com>

	Released 0.2.1.

	* configure.ac: Append the revision number to the version suffix.

	* src/Makefile.am: Reduced verbosity level of makensis.

	* src/exdll.h: Adapted license to the NSIS one.
	(popstring): Add arg MAXLEN.
	* src/g4wihelp.c (playsound, stopsound): New.
	(splash_wndproc, showsplash): New.
	* src/inst-sections.nsi (.onInit): Use our new g4wihelp functions.
	(-startmenu): Translate the startmenu entries for the manuals.

	* src/installer.nsi (ReserveFile): Removed advsplash.

	* src/inst-gpa.nsi: Uppercase section name.

	* src/inst-man_novice_de.nsi, src/inst-man_advanced_de.nsi:
	Translate section name.

	* src/inst-gpgol.nsi: Try to register even on overwrite failure.

2005-11-24  Werner Koch  <wk@g10code.com>

	Released 0.2.0.

	* src/installer.nsi (PrintCloseOtherApps): New.

2005-11-21  Werner Koch  <wk@g10code.com>

	Released 0.1.0.

	* src/inst-sections.nsi: Disable uninstaller menu link.
